[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-mind-framework"
version = "0.2.0" # Aligns with our changelog
description = "An antifragile framework for managing multiple AI providers with built-in telemetry."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory ('.')
exclude = ["tests*"] # Exclude the tests directory from the package itself